k8s/operators/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cockatoo-ingress
  namespace: cockatoo
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - join.leaf.cloud
      secretName: cockatoo-ingress-tls
  rules:
  - host: join.leaf.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            serviceName: cockatoo-entrypoint
            servicePort: 8000
